--- a/src/components/alg/alg-conspect/sp/pages/elem-sp14.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp14.html
@@ -87,18 +87,101 @@ int tmp = *st.begin();
 
   <p>Решение задачи экзамен по истории</p>
 <pre>
-
+int n, q, tmp, count = 0;
+set&lt;int&gt; st;
+cin >> n;
+for (int i = 0; i &lt; n; i++) {
+  cin >> tmp;
+  st.insert(tmp);
+}
+cin >> q;
+for (int i = 0; i &lt; q; i++) {
+  cin >> tmp;
+  if (st.find(tmp) != st.end()) {
+    count++;
+  }
+}
+cout &lt;&lt; count;
 </pre>
 
+  <h4>map</h4>
+  <p>map - это отсортированный ассоциативный контейнер, содержащий пары «ключ-значение» с уникальными ключами. Но при добавлении одинаковых ключей, map будет хранить только один его экземпляр. По другому map еще называют словарем.</p>
+  <p>Два свойства map:</p>
+  <ol>
+    <li>Все элементы по ключам уникальны. Нет повторяющихся ключей.</li>
+    <li>Все элементы по ключам упорядочены по возрастанию.</li>
+  </ol>
+  <p>map&lt;тип данных1, тип данных2&gt; имя;</p>
+<pre>
+map&lt;int, int&gt; mp;
+pair&lt;int, int&gt; tmp;
+mp[10] = 1;
+tmp = *mp.begin();
+cout &lt;&lt; tmp.first &lt;&lt; " " &lt;&lt; tmp.second;
+</pre>
+  <ol>
+    <li>.empty() Проверяет, является ли map пустым. true/false</li>
+    <li>.size() Возвращает количество элементов в map.</li>
+    <li>.begin() Возвращает итератор на первый элемент.</li>
+    <li>.end() Возвращает итератор за последним элементом.</li>
+    <li>.rbegin() Возвращает итератор на последний элемент.</li>
+    <li>.rend() Возвращает итератор перед первым элементом.</li>
+    <li>.find(key) Возвращает итератор на элемент с ключом равным key. Если элемента нет возвращает итератор равный .end().</li>
+    <li>.insert(p) Добавляет элемент (pair) p в map.</li>
+    <li>.erase(a) Удаляет элемент из map по ключу равному a. Перед удалением следует проверить, что ключ существует в map.</li>
+    <li>.erase(iter) Удаляет элемент из map по итератору iter.</li>
+    <li>.lower_bound(a) Возвращает итератор на первый элемент с ключом большим либо равным a. Если таких элементов нет, возвращает итератор равный итератору .end().</li>
+    <li>.upper_bound(a) Возвращает итератор на первый элемент с ключом большим a. Если таких элементов нет, возвращает итератор равный итератору .end().</li>
+  </ol>
 
+  <h4>multiset</h4>
+  <p>multiset - это контейнер, который автоматически сортирует добавляемые элементы в порядке возрастания. При добавлении одинаковых значений, multiset будет хранить все его экземпляры.</p>
+  <p>Одно свойство multiset:</p>
+  <ol>
+    <li>Все элементы упорядочены по возрастанию.</li>
+  </ol>
+  <p>multiset<тип данных> имя;</p>
+<pre>
+multiset&lt;int&gt; st;
+st.insert(10);
+int tmp = *st.begin();
+</pre>
+  <p>Пример:</p>
+  <code>1 2 3 4 1 2 9 7 12</code>
+  <p>В multiset:</p>
+  <code>1 1 2 2 3 4 7 9 12</code>
+  <ol>
+    <li>.empty() Проверяет, является ли multiset пустым. true/false</li>
+    <li>.size() Возвращает количество элементов в multiset.</li>
+    <li>.begin() Возвращает итератор на первый элемент.</li>
+    <li>.end() Возвращает итератор за последним элементом.</li>
+    <li>.rbegin() Возвращает итератор на последний элемент.</li>
+    <li>.rend() Возвращает итератор перед первым элементом.</li>
+    <li>.find(key) Возвращает итератор на элемент равный key. Если элемента нет возвращает итератор равный .end().</li>
+    <li>.insert(a) Добавляет элемент a в multiset.</li>
+    <li>.erase(a) Удаляет все элементы из multiset по значению равному a. Перед удалением следует проверить, что элемент существует в multiset.</li>
+    <li>.erase(iter) Удаляет элемент из multiset по итератору iter.</li>
+    <li>.lower_bound(a) Возвращает итератор на первый элемент больший либо равный a. Если таких элементов нет, возвращает итератор равный итератору .end().</li>
+    <li>.upper_bound(a) Возвращает итератор на первый элемент больший a. Если таких элементов нет, возвращает итератор равный итератору .end().</li>
+  </ol>
 
+  <code>multiset&lt;int&gt; st:</code>
+  <code>1 1 2 2 3 4 7 9 12</code>
+  <code>st.erase(1):</code>
+  <code>2 2 3 4 7 9 12</code>
+  <code>st.erase(st.begin()):</code>
+  <code>1 2 2 3 4 7 9 12</code>
 
-
-
-
-
-
-
+  <h4>Ускорение ввода/вывода</h4>
+  <p>В задачах, где много вывода, можно получить TL только из-за того, что ввод
+  (или вывод) занимает очень много времени. По умолчанию C++ использует
+  синхронизацию с stdio, что может замедлять операции ввода-вывода. Вы
+  можете отключить ее следующим образом:</p>
+  <p>Команды ускорения:</p>
+<pre>
+ios::sync_with_studio(0);
+cin.tie(0);
+</pre>
 </article>
 
 
